# Delta_Robot_Project

./: .gitignore  CMakeLists.txt  LICENSE  backup.cc
Model/: delta_robot_V2.xml
Model/assets/: motor2.stl  zong_zhuang_pei____base_1__shu_ru_10_1.stl  zong_zhuang_pei____base_1__shu_ru_11_1.stl  zong_zhuang_pei____base_1__shu_ru_12_1.stl  zong_zhuang_pei____base_1__shu_ru_13_1.stl  zong_zhuang_pei____base_1__shu_ru_14_1.stl  zong_zhuang_pei____base_1__shu_ru_15_1.stl  zong_zhuang_pei____base_1__shu_ru_16_1.stl  zong_zhuang_pei____base_1__shu_ru_17_1.stl  zong_zhuang_pei____base_1__shu_ru_18_1.stl  zong_zhuang_pei____base_1__shu_ru_19_1.stl  zong_zhuang_pei____base_1__shu_ru_1_1.stl  zong_zhuang_pei____base_1__shu_ru_20_1.stl  zong_zhuang_pei____base_1__shu_ru_21_1.stl  zong_zhuang_pei____base_1__shu_ru_22_1.stl  zong_zhuang_pei____base_1__shu_ru_23_1.stl  zong_zhuang_pei____base_1__shu_ru_24_1.stl  zong_zhuang_pei____base_1__shu_ru_25_1.stl  zong_zhuang_pei____base_1__shu_ru_26_1.stl  zong_zhuang_pei____base_1__shu_ru_27_1.stl  zong_zhuang_pei____base_1__shu_ru_28_1.stl  zong_zhuang_pei____base_1__shu_ru_2_1.stl  zong_zhuang_pei____base_1__shu_ru_3_1.stl  zong_zhuang_pei____base_1__shu_ru_4_1.stl  zong_zhuang_pei____base_1__shu_ru_5_1.stl  zong_zhuang_pei____base_1__shu_ru_6_1.stl  zong_zhuang_pei____base_1__shu_ru_7_1.stl  zong_zhuang_pei____base_1__shu_ru_8_1.stl  zong_zhuang_pei____base_1__shu_ru_9_1.stl  (+130 more)
include/: inverse_kin.h  my_pinocchio.h
src/: basic.cc  inverseKinematics.cpp  inverse_kinematics.cpp  main.cc  printBodyPosition.cpp
(+1 files in other folders)
